--- a/src/blog.css
+++ b/src/blog.css
@@ -82,6 +82,7 @@ body{
     left: 240px;
     top: 67px;
     box-shadow: 0px 0px 40px 1px rgba(0, 0, 0, 0.326);
+    z-index: 9999999999999;
 }
 
 #pt31{
